syntax = "proto3";
package Cratis.Chronicle.Contracts.ReadModels;
import "google/protobuf/empty.proto";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message AppendedEvent {
   EventContext Context = 1;
   string Content = 2;
}
message Causation {
   SerializableDateTimeOffset Occurred = 1;
   string Type = 2;
   map<string,string> Properties = 3;
}
message DehydrateSessionRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReadModelIdentifier = 3;
   string EventSequenceId = 4;
   string ReadModelKey = 5;
   string SessionId = 6;
}
message EventContext {
   EventType EventType = 1;
   string EventSourceType = 2;
   string EventSourceId = 3;
   uint64 SequenceNumber = 4;
   string EventStreamType = 5;
   string EventStreamId = 6;
   SerializableDateTimeOffset Occurred = 7;
   string EventStore = 8;
   string Namespace = 9;
   .bcl.Guid CorrelationId = 10; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated Causation Causation = 11;
   Identity CausedBy = 12;
   EventObservationState ObservationState = 13;
   repeated string Tags = 14;
   string Hash = 15;
}
enum EventObservationState {
   // this is a composite/flags enumeration
   None = 0;
   Initial = 1;
   HeadOfReplay = 2;
   Replay = 4;
   TailOfReplay = 8;
}
message EventType {
   string Id = 1;
   uint32 Generation = 2;
   bool Tombstone = 3;
}
message GetAllInstancesRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReadModelIdentifier = 3;
   string EventSequenceId = 4; // default value could not be applied: event-log
   uint64 EventCount = 5; // default value could not be applied: 18446744073709551615
}
message GetAllInstancesResponse {
   repeated string Instances = 1;
   uint64 ProcessedEventsCount = 2;
}
message GetDefinitionsRequest {
   string EventStore = 1;
}
message GetDefinitionsResponse {
   repeated ReadModelDefinition ReadModels = 1;
}
message GetInstanceByKeyRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReadModelIdentifier = 3;
   string EventSequenceId = 4;
   string ReadModelKey = 5;
   string SessionId = 6;
}
message GetInstanceByKeyResponse {
   string ReadModel = 1;
   uint64 ProjectedEventsCount = 2;
   uint64 LastHandledEventSequenceNumber = 3;
}
message GetInstancesRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReadModel = 3;
   string Occurrence = 4;
   int32 Page = 5;
   int32 PageSize = 6;
}
message GetInstancesResponse {
   repeated string Instances = 1;
   int64 TotalCount = 2;
   int32 Page = 3;
   int32 PageSize = 4;
}
message GetOccurrencesRequest {
   string EventStore = 1;
   string Namespace = 2;
   ReadModelType Type = 3;
}
message GetOccurrencesResponse {
   repeated ReadModelOccurrence Occurrences = 1;
}
message GetSnapshotsByKeyRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReadModelIdentifier = 3;
   string EventSequenceId = 4;
   string ReadModelKey = 5;
}
message GetSnapshotsByKeyResponse {
   repeated ReadModelSnapshot Snapshots = 1;
}
message Identity {
   string Subject = 1;
   string Name = 2;
   string UserName = 3;
   Identity OnBehalfOf = 4;
}
message IndexDefinition {
   string PropertyPath = 1;
}
message ReadModelChangeset {
   string Namespace = 1;
   string ModelKey = 2;
   string ReadModel = 3;
   bool Removed = 4;
}
message ReadModelDefinition {
   ReadModelType Type = 1;
   string ContainerName = 2;
   string DisplayName = 3;
   SinkDefinition Sink = 4;
   string Schema = 5;
   repeated IndexDefinition Indexes = 6;
   ReadModelObserverType ObserverType = 7;
   string ObserverIdentifier = 8;
   ReadModelOwner Owner = 9;
   ReadModelSource Source = 10;
}
enum ReadModelObserverType {
   NotSet = 0;
   Reducer = 1;
   Projection = 2;
}
message ReadModelOccurrence {
   string ObserverId = 1;
   SerializableDateTimeOffset Occurred = 2;
   ReadModelType Type = 3;
   string ContainerName = 4;
   string RevertContainerName = 5;
}
enum ReadModelOwner {
   None = 0;
   Client = 1;
   Server = 2;
}
message ReadModelSnapshot {
   string ReadModel = 1;
   repeated AppendedEvent Events = 2;
   SerializableDateTimeOffset Occurred = 3;
   .bcl.Guid CorrelationId = 4;
}
enum ReadModelSource {
   Unknown = 0;
   Code = 1;
   User = 2;
}
message ReadModelType {
   string Identifier = 1;
   uint32 Generation = 2;
}
message RegisterManyRequest {
   string EventStore = 1;
   ReadModelOwner Owner = 2;
   repeated ReadModelDefinition ReadModels = 3;
   ReadModelSource Source = 4; // default value could not be applied: Code
}
message RegisterSingleRequest {
   string EventStore = 1;
   ReadModelOwner Owner = 2;
   ReadModelDefinition ReadModel = 3;
   ReadModelSource Source = 4; // default value could not be applied: Code
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
message SinkDefinition {
   .bcl.Guid ConfigurationId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   .bcl.Guid TypeId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message UpdateDefinitionRequest {
   string EventStore = 1;
   ReadModelDefinition ReadModel = 2;
}
message WatchRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReadModelIdentifier = 3;
   string EventSequenceId = 4;
}
service ReadModels {
   rpc DehydrateSession (DehydrateSessionRequest) returns (.google.protobuf.Empty);
   rpc GetAllInstances (GetAllInstancesRequest) returns (GetAllInstancesResponse);
   rpc GetDefinitions (GetDefinitionsRequest) returns (GetDefinitionsResponse);
   rpc GetInstanceByKey (GetInstanceByKeyRequest) returns (GetInstanceByKeyResponse);
   rpc GetInstances (GetInstancesRequest) returns (GetInstancesResponse);
   rpc GetOccurrences (GetOccurrencesRequest) returns (GetOccurrencesResponse);
   rpc GetSnapshotsByKey (GetSnapshotsByKeyRequest) returns (GetSnapshotsByKeyResponse);
   rpc RegisterMany (RegisterManyRequest) returns (.google.protobuf.Empty);
   rpc RegisterSingle (RegisterSingleRequest) returns (.google.protobuf.Empty);
   rpc UpdateDefinition (UpdateDefinitionRequest) returns (.google.protobuf.Empty);
   rpc Watch (WatchRequest) returns (stream ReadModelChangeset);
}
